Fix alignment issue

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -208,7 +208,7 @@ footer p{
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       gap: 0 2rem;
-      margin: 2rem 0;
+      margin: 0.5rem 0 2rem 0;
       align-items: baseline;
     }
 
